<resources>
    <string name="app_name">Digi e-Learning</string>
    <string name="set">to send you password reset</string>
    <string name="reset">We just need your registered email address</string>
    <string name="forget_password">Forget Password?</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>