<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPasswordActivity"
    android:background="#2A2F39"
    android:paddingTop="?attr/actionBarSize">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_twotone_lock_24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/lock"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/lock"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:id="@+id/foeget_password_text_view"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/message"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/foeget_password_text_view"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textColor="#747A85"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set"
        android:id="@+id/setting"
        android:layout_below="@id/message"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textColor="#747A85"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textSize="18sp"
        android:layout_marginTop="?attr/actionBarSize"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:backgroundTint="#00000000"
        android:hint="E-mail Address"
        android:id="@+id/email_id_textview"
        android:textColorHint="#5E626C"
        android:drawablePadding="10dp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/vutton_design_one"
        android:layout_below="@id/email_id_textview"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        android:text="REGISTER"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:id="@+id/register_textview"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="#5E626C"
        android:layout_above="@id/register_textview"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        />

</RelativeLayout>